[tool.poetry]
name = "obiba-opal"
version = "5.2.0"
description = "OBiBa/Opal python client."
authors = ["Yannick Marcon <yannick.marcon@obiba.org>"]
maintainers = ["Yannick Marcon <yannick.marcon@obiba.org>"]
license = "GPL-v3"
readme = "README.md"
packages = [{include = "obiba_opal"}]
homepage = "https://www.obiba.org"
repository = "https://github.com/obiba/opal-python-client"
documentation = "https://opaldoc.obiba.org/en/latest/python-user-guide/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obiba/opal-python-client/issues"

[tool.poetry.dependencies]
python = "^3.7"
pycurl = "^7.45.2"

[tool.poetry.scripts]
opal = 'obiba_opal.console:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
