[project]
name = "obiba-opal"
version = "6.0.0"
description = "OBiBa/Opal python client."
authors = [
    {name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}
]
maintainers = [
    {name = "Yannick Marcon", email = "yannick.marcon@obiba.org"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["opal", "obiba", "data", "management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
]
dev = [
    "ruff>=0.10.0",
]

[project.scripts]
opal = "obiba_opal.console:run"

[project.urls]
Homepage = "https://www.obiba.org"
Repository = "https://github.com/obiba/opal-python-client"
Documentation = "https://opaldoc.obiba.org/en/latest/python-user-guide/"
"Bug Tracker" = "https://github.com/obiba/opal-python-client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["obiba_opal"]
